--- a/WebContent/managebooks.html
+++ b/WebContent/managebooks.html
@@ -7,9 +7,9 @@
   <meta name="description" content="Online Bookstore">
   <meta name="keywords" content="bookstore, shopping, ecommerce, books, shop">
   <meta name="author" content="Avery Davis">
-  <title>Admin | ManageBooks</title>
+  <title>Admin | Books</title>
   <link rel="stylesheet" href="./css/adminstylesheet.css">
-  <script src="scripts.js"></script>
+  <script src="./js/scritps.js"></script>
 </head>
 
 <body>
@@ -24,72 +24,90 @@
   <div id="mySidenav" class="sidenav">
     <a href="admin.html">Dashboard</a>
     <a href="managebooks.html">Manage Books</a>
-    <a href="#">Manage Promotions</a>
-    <a href="#">Manage Users</a>
+    <a href="managePromotions.html">Manage Promotions</a>
+    <a href="manageUsers.html">Manage Users</a>
     <a href="index.html">Logout</a>
   </div>
 
-
-  <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
   <div id="main">
     <h2>Manage Books</h2>
     <hr>
     <h4>Book Catalog</h4>
-    <div style="overflow-x:auto;">
-      <table>
-        <th>Serial #</th>
-        <th>Book Title</th>
-        <th>Author</th>
-        <th>MSRP</th>
-        <th>In Stock</th>
-        <th>Purchased</th>
-        <th>Returned</th>
-        </tr>
-        <tr>
-          <td>AR001</td>
-          <td>The Fountainhead</td>
-          <td>Ayn Rand</td>
-          <td>$12.00</td>
-          <td>100</td>
-          <td>50</td>
-          <td>1</td>
-        </tr>
-        <tr>
-          <td>HM001</td>
-          <td>Norwegian Wood</td>
-          <td>Haruki Murakami</td>
-          <td>$14.00</td>
-          <td>100</td>
-          <td>94</td>
-          <td>8</td>
-        </tr>
-        <tr>
-          <td>WG001</td>
-          <td>Neuromancer</td>
-          <td>William Gibson</td>
-          <td>$14.00</td>
-          <td>100</td>
-          <td>67</td>
-          <td>3</td>
-        </tr>
-        <tr>
-          <td>HM002</td>
-          <td>Moby Dick</td>
-          <td>Herman Melville</td>
-          <td>$12.00</td>
-          <td>100</td>
-          <td>30</td>
-          <td>2</td>
-      </table>
+    <div class="tables" id="bookTable">
+      <!--
+      <div style="overflow-x:auto;">
+        <table>
+          <th>Serial #</th>
+          <th>Book Title</th>
+          <th>Author</th>
+          <th>MSRP</th>
+          <th>In Stock</th>
+          <th>Purchased</th>
+          <th>Returned</th>
+          </tr>
+          <tr>
+            <td>AR001</td>
+            <td>The Fountainhead</td>
+            <td>Ayn Rand</td>
+            <td>$12.00</td>
+            <td>100</td>
+            <td>50</td>
+            <td>1</td>
+          </tr>
+          <tr>
+            <td>HM001</td>
+            <td>Norwegian Wood</td>
+            <td>Haruki Murakami</td>
+            <td>$14.00</td>
+            <td>100</td>
+            <td>94</td>
+            <td>8</td>
+          </tr>
+          <tr>
+            <td>WG001</td>
+            <td>Neuromancer</td>
+            <td>William Gibson</td>
+            <td>$14.00</td>
+            <td>100</td>
+            <td>67</td>
+            <td>3</td>
+          </tr>
+          <tr>
+            <td>HM002</td>
+            <td>Moby Dick</td>
+            <td>Herman Melville</td>
+            <td>$12.00</td>
+            <td>100</td>
+            <td>30</td>
+            <td>2</td>
+        </table>
+      </div>
+    -->
     </div>
     <hr>
     <div class="admintool" id="addBook">
       <label for="newbook" class="input-label"> <b>Add New Book</b></label>
       <br>
-      <input type="text" class="title" placeholder="Title" required>
-      <input type="text" class="author" placeholder="Author Full Name" required>
-      <input type="text" class="title" placeholder="Stock on Hand" required>
-      <input type="text" class="title" placeholder="MSRP" required>
+      <!--Book Table-->
+      <input type="text" class="ISBN" placeholder="ISBN">
+      <input type="text" class="category" placeholder="Category*" required>
+      <input type="text" class="title" placeholder="Title*" required>
+      <input type="text" class="edition" placeholder="Edition">
+      <input type="text" class="publisher" placeholder="Publisher">
+      <input type="text" class="publication_year" placeholder="Publication Year">
+      <br>
+      <!--Author Table-->
+      <input type="text" class="author_firstname" placeholder="Author First Name" required>
+      <input type="text" class="author_lastname" placeholder="Author Last Name" required>
+      <br>
+      <!--Inventory Table-->
+      <input type="text" class="title" placeholder="Stock on Hand">
+      <input type="text" class="title" placeholder="MSRP">
+      <select name="Book Status" id="Book Status">
+        <option value="A">Available</option>
+        <option value="L">Low Stock</option>
+        <option value="O">Out of Stock</option>
+      </select>
       <br>
       <button type="submit" class="Add">Add New Book</button>
     </div>
@@ -97,30 +115,41 @@
     <div class="adminTool" id="editBook">
       <label for="newbook" class="input-label"> <b>Edit Existing Book</b></label>
       <br>
-      <input type="text" class="Serial" placeholder="Serial" required>
+      <input type="text" class="book_id" placeholder="Book ID*" required>
+      <br>
+      <input type="text" class="ISBN" placeholder="ISBN">
+      <input type="text" class="category" placeholder="Category">
       <input type="text" class="title" placeholder="Title">
-      <input type="text" class="author" placeholder="Author Full Name">
+      <input type="text" class="edition" placeholder="Edition">
+      <input type="text" class="publisher" placeholder="Publisher">
+      <input type="text" class="publication_year" placeholder="Publication Year">
+      <br>
+      <input type="text" class="author_firstname" placeholder="Author First Name">
+      <input type="text" class="author_lastname" placeholder="Author Last Name">
+      <br>
       <input type="text" class="title" placeholder="Stock on Hand">
       <input type="text" class="title" placeholder="MSRP">
+      <select name="Book Status" id="Book Status">
+        <option value="A">Available</option>
+        <option value="L">Low Stock</option>
+        <option value="O">Out of Stock</option>
+      </select>
       <br>
+
       <button type="submit" class="adminTool">Submit Changes</button>
     </div>
     <hr>
     <div class="adminTool" id="deleteBook">
       <label for="newbook" class="input-label"> <b>Delete Existing Book</b></label>
       <br>
-      <input type="text" class="adminTool" placeholder="Serial" required>
+      <input type="text" class="book_id" placeholder="Book ID*" required>
       <br>
       <button type="submit" class="adminTool">Delete</button>
     </div>
 
   </div>
 
-
   </div>
-  <script>
-
-  </script>
 </body>
 
 </html>
