--- a/WebContent/managePromotions.html
+++ b/WebContent/managePromotions.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Avery Davis">
   <title>Admin | Promotions</title>
   <link rel="stylesheet" href="./css/adminstylesheet.css">
-  <script src="./js/scritps.js"></script>
+  <script src="scritps.js"></script>
 </head>
 
 <body>
@@ -22,10 +22,10 @@
   </header>
 
   <div id="mySidenav" class="sidenav">
-    <a href="admin.html">Dashboard</a>
+    <a href="admin.jsp">Dashboard</a>
     <a href="managebooks.html">Manage Books</a>
     <a href="managePromotions.html">Manage Promotions</a>
-    <a href="manageUsers.html">Manage Users</a>
+    <a href="manageUsers.jsp">Manage Users</a>
     <a href="index.html">Logout</a>
   </div>
 
