finished checkout requirement

--- a/WebContent/orderConfirmation.html
+++ b/WebContent/orderConfirmation.html
@@ -8,7 +8,7 @@
 <meta name="keywords"
     content="bookstore, shopping, ecommerce, books, shop">
 <meta name="author" content="Shreenal Patel">
-<title>BookStore | Order Conformation</title>
+<title>BookStore | Order Confirmation</title>
 <link rel="stylesheet" href="./css/stylesheet.css">
 <link rel="stylesheet" href="./css/checkoutstyle.css">
 <script src="scripts.js"></script>
@@ -49,6 +49,7 @@
     <section id="main">
         <div class="container" style="min-height: 370px;">
             <h3>Thank You. Your Order has been placed.</h3>
+            <h3>Check your Confirmation email for more details.</h3>
             <h5>View your Order Here</h5>
             <form action="./myorder.html">
                 <button type="submit" class="button_2">My Orders</button>
