--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="UTF-8">
+ <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="Online Bookstore">
   <meta name="keywords" content="bookstore, shopping, ecommerce, books, shop">
@@ -27,7 +23,7 @@
           <li><a href="login.html" id = "log">Login</a></li>
           <li><a href="register.jsp" id = "register">Register</a></li>
           <li><a href="shoppingcart.html">Shopping Cart</a></li>
-          <li><a href="profile.html" id="session">Profile</a></li>
+          <li><a href="profile.jsp" id="session">Profile</a></li>
          <li><form action="search.jsp">
           	<input type="text" name="search" placeholder="Search...">
           	<label for="order">Sort: </label>
@@ -141,3 +137,4 @@
 </body>
 
 </html>
+
