--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,4 +1,8 @@
- <meta charset="UTF-8">
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="Online Bookstore">
   <meta name="keywords" content="bookstore, shopping, ecommerce, books, shop">
@@ -22,7 +26,7 @@
           <li class="current"><a href="index.html">Home</a></li>
           <li><a href="login.html" id = "log">Login</a></li>
           <li><a href="register.jsp" id = "register">Register</a></li>
-          <li><a href="shoppingcart.html">Shopping Cart</a></li>
+          <li><a href="shoppingcart.jsp">Shopping Cart</a></li>
           <li><a href="profile.jsp" id="session">Profile</a></li>
          <li><form action="search.jsp">
           	<input type="text" name="search" placeholder="Search...">
@@ -137,4 +141,3 @@
 </body>
 
 </html>
-
