--- a/WebContent/orderConfirmation.html
+++ b/WebContent/orderConfirmation.html
@@ -25,8 +25,8 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="login.html" id = "log">Login</a></li>
           <li><a href="register.jsp" id = "register">Register</a></li>
-          <li><a href="shoppingcart.html" class="current">Shopping Cart</a></li>
-          <li><a href="profile.html" id="session">Profile</a></li>
+          <li><a href="shoppingcart.jsp" class="current">Shopping Cart</a></li>
+          <li><a href="profile.jsp" id="session">Profile</a></li>
           <li><input type="text" placeholder="Search..."></li>
           <li><button type="submit" class="search_button" onclick="window.location.href='search.html';">Search</button>
           </li>
@@ -51,7 +51,7 @@
             <h3>Thank You. Your Order has been placed.</h3>
             <h3>Check your Confirmation email for more details.</h3>
             <h5>View your Order Here</h5>
-            <form action="./myorder.html">
+            <form action="./myorder.jsp">
                 <button type="submit" class="button_2">My Orders</button>
             </form>
 
