--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -24,7 +24,7 @@
           <li><a href="index.html">Home</a></li>
           <li class="current"><a href="login.html">Login</a></li>
           <li><a href="register.jsp">Register</a></li>
-          <li><a href="shoppingcart.html">Shopping Cart</a></li>
+          <li><a href="shoppingcart.jsp">Shopping Cart</a></li>
           <li><a href="profile.html" id = "session">Profile</a></li>
           <li><form action="search.jsp">
           	<input type="text" name="search" placeholder="Search...">
