--- a/WebContent/register-confirmation.html
+++ b/WebContent/register-confirmation.html
@@ -21,12 +21,12 @@
           </div>
           <nav>
             <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="login.html">Login</a></li>
-              <li><a href="register.jsp">Register</a></li>
-              <li><a href="shoppingcart.html">Shopping Cart</a></li>
-              <li><a href="profile.html">Profile</a></li>
-              <<li><form action="search.jsp">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="login.html" id = "log">Login</a></li>
+          <li><a href="register.jsp" id = "register">Register</a></li>
+          <li><a href="shoppingcart.jsp">Shopping Cart</a></li>
+          <li class="current"><a href="profile.jsp" id="session">Profile</a></li>
+         <li><form action="search.jsp">
           	<input type="text" name="search" placeholder="Search...">
           	<label for="order">Sort: </label>
           	<select name="order" id="order">
@@ -37,7 +37,7 @@
         	</select>
           	<button type="submit" class="search_button" >Search</button>
           </form></li>
-            </ul>
+        </ul>
           </nav>
         </div>
       </header>
